--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
     "doctrine/dbal": "^2.10|^3.3",
     "doctrine/orm": "^2.6",
     "doctrine/inflector": "^1.4|^2.0",
-    "doctrine/persistence": "^1.3.5|^2.0"
+    "doctrine/persistence": "^1.3.5|^2.0|^3.0"
   },
   "require-dev": {
     "phpunit/phpunit": "~8.0|~9.0",
